got username fixed on spacing

--- a/src/index.css
+++ b/src/index.css
@@ -53,11 +53,11 @@ html {
 
 .postDescription {
   display: flex;
+  margin: 1rem 1rem;
   flex-wrap: wrap;
   font-weight: 400;
   font-size: 1rem;
   color: white;
-  align-self: flex-start;
 }
 
 .postDescriptionDiv {
@@ -72,6 +72,7 @@ html {
 .profile-img {
   height: auto;
   max-width: 50%;
+  margin-right: 1rem;
 }
 
 .sendButton {
@@ -86,7 +87,6 @@ html {
   font-size: 1rem;
   color: white;
   align-self: center;
-  margin-left: 1rem;
   display: flex;
   display: inline-block;
 }
